--- a/example/index.html
+++ b/example/index.html
@@ -1,28 +1,13 @@
-<!--
- * @Author: krui krui0728@gmail.com
- * @Date: 2024-07-23 11:49:03
- * @LastEditors: krui krui0728@gmail.com
- * @LastEditTime: 2024-07-23 15:31:15
- * @FilePath: /fe-calc/index.html
- * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
--->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
   </head>
   <body>
-    <div id="app">
-      这里就是index.html
-    </div>
-    <!-- <script src="./dist/tool.umd.js"></script> -->
-    <script src="./dist/bundle.js"></script>
-    <script>
-
-    </script>
-
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
