--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: krui krui0728@gmail.com
  * @Date: 2024-07-23 11:49:03
  * @LastEditors: krui krui0728@gmail.com
- * @LastEditTime: 2024-07-23 14:56:29
+ * @LastEditTime: 2024-07-23 21:00:47
  * @FilePath: /fe-calc/index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -10,7 +10,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
   </head>
@@ -18,13 +18,10 @@
     <div id="app">
       这里就是index.html
     </div>
-    <!-- <script src="./dist/tool.umd.js"></script> -->
-    <script src="./dist/tool.es.js"></script>
+    <script src="./dist/calc.umd.js"></script>
     <script>
-      const tool = require('./dist/tool.es.js');
-      // import { stSum } from 'tool'
-      console.log(tool);
-      // console.log(stSum(1, 3));
+      console.log(calc);
+      console.log(calc.add(1, 3));
     </script>
 
   </body>
